# wrapanapi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  kill_python3_tests.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.cfg~  setup.py  tox.ini
.github/workflows/: pull_request.yml  release.yml  release_to_pypi.yml
mgmt_system/: __init__.py  base.py  ec2.py  openstack.py  rhevm.py  scvmm.py  virtualcenter.py
mgmtsystem/: __init__.py  azure.py  base.py  ec2.py  exceptions.py  google.py  hawkular.py  kubernetes.py  openshift.py  openstack.py  openstack_infra.py  rest_client.py  rhevm.py  scvmm.py  virtualcenter.py  websocket_client.py
mgmtsystem/utils/: __init__.py
scripts/: extract_variables_from_integration_tests.py
tests/: test_hawkular.py  test_openshift.py  test_openstack.py  test_redfish.py  test_rhevm.py  test_scvmm.py  test_virtualcenter.py  test_vm_and_template_systems.py
tests/resources/hawkular/alerts/: events.json
tests/resources/hawkular/inventory/: feeds.json  status.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/: resourceTypes.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resourceTypes/Datasource/: resources.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resourceTypes/Domain WildFly Server/: resources.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resourceTypes/WildFly Server/: resources.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resourceTypes/XA Datasource/: resources.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resources/WildfyServerOne~%2Fsubsystem%3Ddatasources%2Fdata-source%3DExampleDSMWTest/: data.json
tests/resources/hawkular/inventory/feeds/328c17e1-c97f-4583-89d8-73feb0cf47f6/resources/WildfyServerOne~%2Fsubsystem%3Ddatasources%2Fdata-source%3DExampleXADSMWTest/: data.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/: resourceTypes.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/Datasource/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/Deployment/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/Domain WildFly Server/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/Host Controller/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/JMS Queue/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/SubDeployment/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/WildFly Server/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resourceTypes/XA Datasource/: resources.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resources/Local~%2Fsubsystem%3Ddatasources%2Fdata-source%3DExampleDSMWTest/: data.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resources/Local~%2Fsubsystem%3Ddatasources%2Fdata-source%3DExampleXADSMWTest/: data.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resources/Local~%2Fsubsystem%3Ddatasources%2Fdata-source%3DKeycloakDSMWTest/: data.json
tests/resources/hawkular/inventory/feeds/5ea2d44a-6b07-424b-b54e-0b4c798d1353/resources/Local~~/: data.json
tests/resources/hawkular/inventory/feeds/88db6b41-09fd-4993-8507-4a98f25c3a6b/: resourceTypes.json
tests/resources/hawkular/inventory/feeds/88db6b41-09fd-4993-8507-4a98f25c3a6b/resourceTypes/Deployment/: resources.json
tests/resources/hawkular/inventory/feeds/88db6b41-09fd-4993-8507-4a98f25c3a6b/resourceTypes/File Store/: resources.json
tests/resources/hawkular/inventory/feeds/88db6b41-09fd-4993-8507-4a98f25c3a6b/resourceTypes/Memory/: resources.json
tests/resources/hawkular/inventory/feeds/88db6b41-09fd-4993-8507-4a98f25c3a6b/resourceTypes/Operating System/: resources.json
tests/resources/hawkular/inventory/feeds/c22fb9d6-0ffc-42cd-bf5b-e1d046398fe5/: resourceTypes.json
tests/resources/hawkular/inventory/feeds/cb42d24f-7692-473b-aef4-21094e9d3b1c/: resourceTypes.json
tests/resources/hawkular/inventory/feeds/ff066865-f31b-4028-8630-1bcbed8e5311/: resourceTypes.json
tests/resources/hawkular/metrics/: status.json
wrapanapi/: __init__.py  azure.py  base.py  const.py  ec2.py  exceptions.py  google.py  hawkular.py  kubernetes.py  lenovo.py  msazure.py  nuage.py  openstack.py  openstack_infra.py  rest_client.py  rhevm.py  scvmm.py  vcloud.py  virtualcenter.py  websocket_client.py
wrapanapi/base/: entity.py  system.py  template.py  vm.py
wrapanapi/clients/: __init__.py  rest_client.py  websocket_client.py
wrapanapi/containers/: __init__.py  container.py  deployment_config.py  image.py  image_registry.py  node.py  pod.py  project.py  replicator.py  route.py  service.py  template.py  volume.py
wrapanapi/containers/providers/: kubernetes.py  openshift.py  rhkubernetes.py  rhopenshift.py
wrapanapi/entities/: __init__.py  base.py  entity.py  flavor.py  host.py  instance.py  network.py  physical_container.py  project.py  security_group.py  server.py  stack.py  template.py  vm.py  volume.py
wrapanapi/entities/container/: __init__.py  container.py  image.py  node.py  replicator.py  template.py
wrapanapi/systems/: __init__.py  base.py  ec2.py  google.py  hawkular.py  lenovo.py  msazure.py  nuage.py  openshift.py  openstack.py  openstack_infra.py  redfish.py  rhevm.py  scvmm.py  system.py  vcloud.py  virtualcenter.py
wrapanapi/systems/container/: __init__.py  podman.py  rhkubernetes.py  rhopenshift.py
wrapanapi/utils/: __init__.py  json_utils.py  logger_mixin.py  random.py
(+24 files in other folders)
