[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/wrapanapi",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/wrapanapi",
]

[project.urls]
"Source" = "https://github.com/RedHatQE/wrapanapi"

[project]
name = "wrapanapi"
dynamic = ["version"]
readme = "README.rst"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Peter Savage" },
]
maintainers = [
    { name = "Jitendra Yejare" },
    { name = "Mike Shriver" },
]
keywords = [
    "distutils",
    "hatch",
    "hyperscaler",
    "api",
    "cloud",
]
requires-python = ">=3.9"
dependencies = [
    "azure-core",
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-iothub",
    "azure-mgmt-network",
    "azure-mgmt-resource",
    "azure-mgmt-storage",
    "azure-mgmt-subscription",
    "azure-storage-blob",
    "boto",
    "boto3",
    "botocore",
    "cached_property",
    "dateparser",
    "fauxfactory",
    "google-api-python-client",
    "google-auth",
    "google-compute-engine",
    "inflection",
    "lxml",
    "miq-version",
    "msrestazure",
    "openshift>=0.13.0",
    "ovirt-engine-sdk-python~=4.3",
    "packaging",
    "podman>5.0.0",
    "py3winrm==0.0.1",
    "python-cinderclient",
    "python-glanceclient",
    "python-heatclient",
    "python-ironicclient",
    "python-keystoneclient",
    "python-neutronclient==10.0.0",
    "python-novaclient==18.10.0",
    "openstacksdk",
    "python-swiftclient",
    "pyvcloud==23.0.4",
    "pyvmomi>=6.5.0.2017.5.post1",
    "redfish-client==0.1.0",
    "requests",
    "tzlocal",
    "vspk==5.3.2",
    "wait_for",
    "websocket_client",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]
test = [
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-variables",
    "coveralls",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = ["I"]

ignore = []
