[metadata]
name = wrapanapi
author = Peter Savage
author-email = psavage@redhat.com
summary = A base system for provider management
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    wrapanapi

[flake8]
ignore = E128,E811,W503
max-line-length = 100

[options]
install_requires =
    azure<5.0.0
    azure-storage-common>=1.0
    boto3==1.10.50
    botocore==1.13.50
    boto
    cached_property
    dateparser
    fauxfactory
    google-api-python-client
    google-compute-engine
    inflection
    miq-version
    oauth2client
    ovirt-engine-sdk-python~=4.3
    openshift==0.3.4
    packaging
    pyvmomi>=6.5.0.2017.5.post1
    python-cinderclient
    python-swiftclient
    python-glanceclient
    python-ironicclient
    python-keystoneclient
    python-neutronclient==6.12.0
    python-novaclient==7.1.2
    python-heatclient
    pyvcloud==19.1.2
    py3winrm==0.0.1
    redfish-client==0.1.0
    requests
    suds-jurko
    tzlocal
    vspk==5.3.2
    wait_for
    websocket_client
    # lxml super SGML parser, needs libxml2-devel and libxslt-devel
    lxml
setup_requires = 
    setuptools_scm
    pbr
